# MediaFlow

./: .gitignore  FEATURE_INVENTORY.md  README.md  db_dump.txt  debug_subtitle.txt  debug_translate.txt  debug_translate_loop.txt  inspect_db_to_file.py  inspect_results.py  inspect_results_full.py  inspect_tasks.py  out.txt  package.json  pyproject.toml  pytest.ini  reproduce_bug.py  requirements.txt  run.py  run_convert_test.py  start.bat  start.txt  temp_sub_516c6bb0.ass  temp_sub_ae2e75ce.srt  test_pathlib.py  test_video_CN.srt
backend/: config.py  main.py
backend/core/: container.py  context.py  database.py  pipeline.py  service_registry.py  task_runner.py  ws_notifier.py
backend/prompts/: translate.py
backend/services/: analyzer.py  basicvsr_service.py  basicvsr_worker.py  browser_service.py  cleaner.py  (+8 more)
docs/: ISSUES_FOUND.md
frontend/: build_log.txt  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.electron.json  vite.config.ts
scripts/: cleanup_temp.py
src/: config.py  main.py
tests/: compare_asr_models.py  conftest.py  debug_import.py  debug_snapshot.py  probe_input.py  probe_video.py  raw_probe.py  reproduce_issue_3593.py  reproduce_truncation.py  reproduce_truncation_v2.py  test_adapters.py  test_container_isolation.py  test_phase2_contracts.py  test_pipeline_steps.py  test_task_manager.py  verify_auto_flow.py  verify_cleaner.py  verify_crop.py  verify_crop_adaptive.py  verify_ocr_engine.py  verify_opacity.py  verify_settings.py  verify_synthesis_result.py  verify_system.py  verify_trim.py
user_data/: mediaflow.db
(+221 files in other folders)
